--- a/client/index.html
+++ b/client/index.html
@@ -59,7 +59,18 @@
         </tfoot>
     </table>
 
-    <script src="./app/index.js"></script>
+    <!-- <script src="./app/index.js"></script>  part-1 -->
+    <script src="app/domain/negociacao/negociacao.js"></script>
+    <script>
+        var n1 = new Negociacao(); 
+        n1.quantidade = 10;
+        console.log(n1.quantidade);
+
+        var n2 = new Negociacao();
+        n2.quantidade = 60;
+        console.log(n2.quantidade);
+
+    </script>
     
 </body>
 </html>
